@startuml InterfaceSegrgationConAgregacion
skinparam roundcorner 20

class Pedido {
    items: list[str]
    cantidades: list[int]
    precios: list[float]
    estado: str

    agregar_item()
    precio_total()
}

interface ProcesadorDePagos {
    pagar(pedido)
}

class AutorizadorDePagosSMS {
    autorizado: bool

    verificar_codigo(codigo)
    esAutorizado()
}

class ProcesadorDePagosConDebito {
    codigo_seg: str
    autorizadorSMS: AutorizadorDePagosSMS
    pagar(pedido)
    autorizar_SMS(codigo_seg)
}

class ProcesadorDePagosConCredito {
    codigo_seg: str
    pagar(pedido)
}

class ProcesadorDePagosConBitcoin {
    num_bv: str
    autorizadorSMS: AutorizadorDePagosSMS
    pagar(pedido,crypto)
}

ProcesadorDePagos ..> Pedido
ProcesadorDePagosConDebito ..|> ProcesadorDePagos
ProcesadorDePagosConCredito ..|> ProcesadorDePagos
ProcesadorDePagosConBitcoin ..|> ProcesadorDePagos
ProcesadorDePagosConCredito o--> "1" AutorizadorDePagosSMS
ProcesadorDePagosConBitcoin o--> "1" AutorizadorDePagosSMS
@enduml